test/compile-fail/resolution/multiple-definition-impl/expected.txt
error: the name `b` is defined multiple times
 --> top.rhdl:3:7
  |
3 |     fn b () {}
  |        ^ `b` redefined here
4 |     const b: bool = false;
  |           - previous definition of the type `b` here
